Authentication and Authorization

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "Aceasta_Este_O_Cheie_Super_Secretă_Și_Foarte_Lungă_WeddingPlanner_2026"
+  }
 }
